--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ before_script:
 infra:
   stage: infra
   script:
-    - cd terraform/ && make secrets gitlab-init plan
+    - make secrets gitlab-init plan
 
 test:
   stage: test
@@ -60,8 +60,8 @@ deploy:
       - integration
       - staging
   script:
-    - cd terraform && make secrets gitlab-init
-    - cd ../query && make deploy
+    - make secrets gitlab-init
+    - cd query && make deploy
 
 functional_tests:
   stage: functional_tests
