--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
 alabaster==0.7.12
+alembic==1.0.10
 argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
@@ -41,6 +42,7 @@ Jinja2==2.10.1
 jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
+Mako==1.0.9
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy==0.701
@@ -62,6 +64,7 @@ PyJWT==1.7.1
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
+python-editor==1.0.4
 PyYAML==3.13
 recommonmark==0.5.0
 requests==2.21.0
