--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,12 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
+alabaster==0.7.12
 argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==17.4.0
 aws-sam-translator==1.11.0
 awscli==1.16.158
+Babel==2.6.0
 boto3==1.9.148
 botocore==1.12.148
 cachetools==3.1.0
@@ -32,6 +34,7 @@ google-auth==1.6.3
 google-auth-oauthlib==0.3.0
 hca==6.0.2
 idna==2.8
+imagesize==1.1.0
 inflection==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -45,6 +48,7 @@ mypy-extensions==0.4.1
 oauthlib==3.0.1
 openapi-spec-validator==0.2.6
 orderedmultidict==1.0
+packaging==19.0
 pathlib==1.0.1
 psycopg2-binary==2.8.2
 puremagic==1.4
@@ -53,15 +57,27 @@ pyasn1-modules==0.2.5
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
+Pygments==2.4.0
 PyJWT==1.7.1
+pyparsing==2.4.0
 python-dateutil==2.8.0
+pytz==2019.1
 PyYAML==3.13
+recommonmark==0.5.0
 requests==2.21.0
 requests-http-signature==0.1.0
 requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.0
 six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==2.0.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
 SQLAlchemy==1.3.3
 SQLAlchemy-Utils==0.33.11
 swagger-ui-bundle==0.0.3
