Swagger: Use correct variable name for API_DOMAIN_NAME
Fixup for 3eb0d805

--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -6,7 +6,7 @@ info:
   version: "0.1.0"
 
 servers:
-  - url: https://{{API_HOST}}/v1
+  - url: https://{{API_DOMAIN_NAME}}/v1
 
 paths:
   /query:
