--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
-CommonMark==0.7.5
+commonmark==0.9.0
 connexion==2.2.0
 crc32c==1.7
 cryptography==2.3.1
@@ -22,7 +22,7 @@ Flask==1.0.2
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.3.0
-hca==6.0.1
+hca==6.0.2
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
