--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   TERRAFORM_VERSION: 0.11.13
   LC_ALL: C.UTF-8
   LANG: C.UTF-8
+  TF_CLI_ARGS_apply: --auto-approve
 
 stages:
   - test
@@ -16,7 +17,7 @@ stages:
 before_script:
   - source /etc/profile
   - apt-get update > /dev/null
-  - apt-get install --yes sudo jq moreutils gettext make virtualenv postgresql unzip > /dev/null
+  - apt-get install --yes sudo jq moreutils gettext make virtualenv postgresql zip unzip > /dev/null
   - service postgresql start
   - sudo -u postgres createuser --superuser $(whoami)
   - curl -Os https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
