--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,12 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
-argcomplete==1.9.5
+argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==17.4.0
 aws-sam-translator==1.11.0
-awscli==1.16.148
-boto3==1.9.138
-botocore==1.12.138
+awscli==1.16.158
+boto3==1.9.148
+botocore==1.12.148
 cachetools==3.1.0
 certifi==2019.3.9
 cffi==1.12.3
@@ -15,7 +15,7 @@ chardet==3.0.4
 click==6.7
 clickclick==1.2.2
 colorama==0.3.9
-CommonMark==0.7.5
+commonmark==0.9.0
 connexion==2.2.0
 coverage==4.5.3
 crc32c==1.7
@@ -30,7 +30,7 @@ furl==2.0.0
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.3.0
-hca==5.2.0
+hca==6.0.2
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
@@ -69,5 +69,5 @@ tenacity==5.0.4
 tweak==1.0.2
 typed-ast==1.3.5
 typing==3.6.4
-urllib3==1.24.2
-Werkzeug==0.15.2
+urllib3==1.24.3
+Werkzeug==0.15.3
