--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -146,7 +146,9 @@ components:
         query:
           type: string
           description: Query to run, given as a SQL string.
-  
+      required:
+        - query
+
     QueryJobDescription:
       type: object
       properties:
@@ -158,7 +160,10 @@ components:
           enum: [new, running, done, failed]
         results:
           type: array
-  
+      required:
+        - job_id
+        - status
+
     QueryResult:
       type: object
       description: Result of query
@@ -168,6 +173,9 @@ components:
           description: Submitted query
         results:
           type: array
+      required:
+        - query
+        - results
 
     Error:
       type: object
