--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables:
   AWS_DEFAULT_REGION: us-east-1
   AWS_DEFAULT_OUTPUT: json
   DEBIAN_FRONTEND: noninteractive
-  TERRAFORM_VERSION: 0.11.13
+  TERRAFORM_VERSION: 0.12.0
   LC_ALL: C.UTF-8
   LANG: C.UTF-8
   TF_CLI_ARGS_apply: --auto-approve
@@ -17,7 +17,7 @@ stages:
 before_script:
   - source /etc/profile
   - apt-get update > /dev/null
-  - apt-get install --yes sudo jq moreutils gettext make virtualenv postgresql zip unzip httpie > /dev/null
+  - apt-get install --yes sudo jq moreutils gettext make virtualenv postgresql zip unzip httpie git > /dev/null
   - service postgresql start
   - sudo -u postgres createuser --superuser $(whoami)
   - curl -Os https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
