--- a/requirements.txt.in
+++ b/requirements.txt.in
@@ -5,3 +5,9 @@ hca
 dcplib
 connexion[swagger-ui]
 alembic
+
+# The following packages are pinned to match the versions provided in the Lambda runtime.
+# Their contents are deleted from the Lambda package by `make prune`.
+# See https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
+boto3==1.7.74
+botocore==1.10.74
