--- a/requirements.txt.in
+++ b/requirements.txt.in
@@ -11,3 +11,4 @@ alembic
 # See https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
 boto3==1.9.42
 botocore==1.12.42
+awscli==1.16.52
