--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
 alabaster==0.7.12
+alembic==1.0.10
 attrs==19.1.0
 aws-sam-translator==1.11.0
 awscli==1.16.52
@@ -29,6 +30,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
 jsonschema==2.6.0
+Mako==1.0.12
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy==0.701
@@ -43,6 +45,7 @@ pyflakes==2.1.1
 Pygments==2.4.2
 pyparsing==2.4.0
 python-dateutil==2.8.0
+python-editor==1.0.4
 pytz==2019.1
 PyYAML==5.1.1
 recommonmark==0.5.0
