chalice config: Set API Gateway stage name to match app stage
This allows co-located API Gateway objects to be distinguishable in the AWS Console.

--- a/.chalice/config.in.json
+++ b/.chalice/config.in.json
@@ -4,18 +4,18 @@
   "autogen_policy": false,
   "lambda_memory_size": 256,
   "lambda_timeout": 900,
+  "minimum_compression_size": 0,
   "environment_variables": {
     "XDG_CONFIG_HOME": "/tmp"
   },
+  "tags": {
+    "managedBy": "chalice",
+    "project": "dcp"
+  },
   "stages": {
-    "dev": {
-      "api_gateway_stage": "api",
-      "iam_policy_file": "policy-dev.json",
-      "environment_variables": {},
-      "tags": {
-        "managedBy": "chalice",
-        "project": "dcp"
-      }
-    }
+    "dev": {},
+    "integration": {},
+    "staging": {},
+    "prod": {}
   }
 }
