--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -147,11 +147,14 @@ components:
           type: string
           description: Query to run, given as a SQL string.
         params:
-          type: object
+          oneOf:
+            - type: array
+            - type: object
           description: >
-            Parameters of the query. Supply a mapping of parameters using the _named_ parameter style. For example,
-            a query to count all files over a certain size might look like `select count(*) from files where size > :s`.
-            To find all files over 1TB in size, pass the following `params` value for this query: `{"s": 2**30}}`.
+            Parameters of the query. Supply a mapping of parameters using the _format_ or _pyformat_ parameter style.
+            For example, a query to count all files over a certain size might look like
+            `select count(*) from files where size > %(sz)s`. To find all files over 1TB in size, pass the following
+            `params` value for this query: `{"sz": 2**30}}`.
       required:
         - query
 
@@ -178,7 +181,9 @@ components:
           type: string
           description: Submitted query
         params:
-          type: object
+          oneOf:
+            - type: array
+            - type: object
           description: Parameters of the submitted query
         results:
           type: array
