--- a/requirements.txt.in
+++ b/requirements.txt.in
@@ -1,7 +1,14 @@
 psycopg2-binary
 sqlalchemy
 requests-http-signature
+connexion[swagger-ui]
 hca
 dcplib
-connexion[swagger-ui]
-alembic
+
+# The following packages are pinned to match the versions provided in the Lambda runtime.
+# Their contents are deleted from the Lambda package by `make prune`.
+# See https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
+boto3==1.9.42
+botocore==1.12.42
+awscli==1.16.52
+PyYAML==5.1.1
