--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,6 +10,7 @@ awscli==1.16.52
 Babel==2.7.0
 boto3==1.9.42
 botocore==1.12.42
+Brotli==1.0.7
 cachetools==3.1.1
 certifi==2019.6.16
 cffi==1.12.3
