--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,9 @@ integration_test:
   stage: release
   script:
     - git remote set-url origin https://$GITHUB_TOKEN@github.com/HumanCellAtlas/query-service
-    - export status=$(scripts/status.py $(echo $RELEASE_COMMAND | cut -d ' ' -f 2) --owner HumanCellAtlas --repo dcp)
-    - if [[ ${RELEASE_COMMAND} != *"--force"* && ${status} != "success" ]]; then
+    - export branch=$(echo $RELEASE_COMMAND | cut -d ' ' -f 2)
+    - export status=$(scripts/status.py $branch --owner HumanCellAtlas --repo dcp)
+    - if [[ $branch != master && $RELEASE_COMMAND != *"--force"* && $status != "success" ]]; then
     -   echo "DCP Integration test returned status ${status}";
     -   exit 1
     - fi
