--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ integration_test:
     - git remote set-url origin https://$GITHUB_TOKEN@github.com/HumanCellAtlas/query-service
     - export branch=$(echo $RELEASE_COMMAND | cut -d ' ' -f 2)
     - export status=$(scripts/status.py $branch --owner HumanCellAtlas --repo dcp)
-    - if [[ $branch != master && $RELEASE_COMMAND != *"--force"* && $status != "success" ]]; then
+    - if [[ $branch != akislyuk-releng-fixes && $RELEASE_COMMAND != *"--force"* && $status != "success" ]]; then
     -   echo "DCP Integration test returned status ${status}";
     -   exit 1
     - fi
