--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ stages:
   - release
 
 before_script:
+  - env
   - source /etc/profile
   - apt-get update > /dev/null
   - apt-get install --yes sudo jq moreutils gettext make virtualenv postgresql zip unzip httpie git > /dev/null
