Add contact info to Swagger docs and query UI
Fixes #211.

--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -2,7 +2,17 @@ openapi: "3.0.0"
 
 info:
   title: DCP Query Service API
-  description: Data Coordination Platform Query Service API
+  description: >
+    The HCA DCP Query Service provides an interface for scientists and developers to query metadata associated with
+    experimental and analysis data stored in the <a href="https://humancellatlas.org/">Human Cell Atlas</a>
+    <a href="https://www.humancellatlas.org/data-sharing">Data Coordination Platform</a> (DCP). Metadata from the
+    <a href="https://github.com/HumanCellAtlas/data-store">DCP Data Store</a> are indexed and stored in an
+    <a href="https://aws.amazon.com/rds/aurora/">AWS Aurora</a> <a href="https://www.postgresql.org/">PostgreSQL</a>
+    database.
+
+
+    To get in touch with the DCP Query Service team, join the <code>#query-service</code> channel on the
+    <a href="https://join-hca-slack.data.humancellatlas.org/">HCA Slack</a>.
   version: "0.1.0"
 
 servers:
