--- a/dcpquery-api.yml
+++ b/dcpquery-api.yml
@@ -8,8 +8,8 @@ info:
     <a href="https://www.humancellatlas.org/data-sharing">Data Coordination Platform</a> (DCP). Metadata from the
     <a href="https://github.com/HumanCellAtlas/data-store">DCP Data Store</a> are indexed and stored in an
     <a href="https://aws.amazon.com/rds/aurora/">AWS Aurora</a> <a href="https://www.postgresql.org/">PostgreSQL</a>
-    database.
-
+    database. For more user documentation, and example queries check out the
+    <a href="https://dcpquery.readthedocs.io/">documentaton on Read the Docs</a>
 
     To get in touch with the DCP Query Service team, join the <code>#query-service</code> channel on the
     <a href="https://join-hca-slack.data.humancellatlas.org/">HCA Slack</a>.
