--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
 alabaster==0.7.12
-alembic==1.0.10
+alembic==1.1.0
 argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
@@ -14,27 +14,27 @@ Brotli==1.0.7
 cachetools==3.1.1
 certifi==2019.6.16
 cffi==1.12.3
-chalice==1.9.0
+chalice==1.11.0
 chardet==3.0.4
 click==6.7
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.0
 connexion==2.3.0
-coverage==4.5.3
+coverage==4.5.4
 crc32c==1.7
 cryptography==2.3.1
-dcplib==3.1.0
-docutils==0.14
+dcplib==3.3.0
+docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.2
-flake8==3.7.7
-Flask==1.0.3
+flake8==3.7.8
+Flask==1.1.1
 furl==2.0.0
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.4.0
-hca==6.3.0
+hca==6.4.0
 idna==2.8
 imagesize==1.1.0
 inflection==0.3.1
@@ -43,49 +43,51 @@ Jinja2==2.10.1
 jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
-Mako==1.0.12
+Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-mypy==0.701
+mypy==0.720
 mypy-extensions==0.4.1
-oauthlib==3.0.1
-openapi-spec-validator==0.2.7
-orderedmultidict==1.0
-packaging==19.0
+oauthlib==3.1.0
+openapi-spec-validator==0.2.8
+orderedmultidict==1.0.1
+packaging==19.1
 psycopg2-binary==2.8.3
 puremagic==1.4
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
 Pygments==2.4.2
 PyJWT==1.7.1
-pyparsing==2.4.0
+pyparsing==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
-pytz==2019.1
+pytz==2019.2
 PyYAML==5.1.1
-recommonmark==0.5.0
+recommonmark==0.6.0
 requests==2.22.0
 requests-http-signature==0.1.0
 requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
-snowballstemmer==1.2.1
-Sphinx==2.1.2
+snowballstemmer==1.9.0
+Sphinx==2.2.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-SQLAlchemy==1.3.5
-SQLAlchemy-Utils==0.34.0
+SQLAlchemy==1.3.8
+SQLAlchemy-Utils==0.34.2
 swagger-ui-bundle==0.0.5
 tenacity==5.0.4
-tweak==1.0.2
-typed-ast==1.3.5
+termcolor==1.1.0
+tweak==1.0.3
+typed-ast==1.4.0
+typing-extensions==3.7.4
 urllib3==1.24.3
-Werkzeug==0.15.4
+Werkzeug==0.15.5
