--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,14 @@ commonmark==0.9.0
 connexion==2.3.0
 crc32c==1.7
 cryptography==2.3.1
-dcplib==3.1.0
-docutils==0.14
-Flask==1.0.3
+dcplib==3.3.0
+docutils==0.15.2
+Flask==1.1.1
+furl==2.0.0
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.4.0
-hca==6.3.0
+hca==6.4.0
 idna==2.8
 inflection==0.3.1
 itsdangerous==1.1.0
@@ -32,12 +33,13 @@ jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
 MarkupSafe==1.1.1
-oauthlib==3.0.1
-openapi-spec-validator==0.2.7
+oauthlib==3.1.0
+openapi-spec-validator==0.2.8
+orderedmultidict==1.0.1
 psycopg2-binary==2.8.3
 puremagic==1.4
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
 pycparser==2.19
 PyJWT==1.7.1
 python-dateutil==2.8.0
@@ -48,9 +50,10 @@ requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
-SQLAlchemy==1.3.5
+SQLAlchemy==1.3.8
 swagger-ui-bundle==0.0.5
 tenacity==5.0.4
-tweak==1.0.2
+termcolor==1.1.0
+tweak==1.0.3
 urllib3==1.24.3
-Werkzeug==0.15.4
+Werkzeug==0.15.5
