--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,5 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
+aegea==2.6.3
 alabaster==0.7.12
 alembic==1.1.0
 argcomplete==1.10.0
@@ -8,6 +9,7 @@ attrs==19.1.0
 aws-sam-translator==1.11.0
 awscli==1.16.52
 Babel==2.7.0
+bcrypt==3.1.7
 boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
@@ -25,6 +27,7 @@ coverage==4.5.4
 crc32c==1.7
 cryptography==2.3.1
 dcplib==3.3.0
+dnspython==1.16.0
 docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.2
@@ -38,11 +41,13 @@ hca==6.4.0
 idna==2.8
 imagesize==1.1.0
 inflection==0.3.1
+ipwhois==1.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
+keymaker==1.0.9
 Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -52,15 +57,17 @@ oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
 packaging==19.1
+paramiko==2.6.0
 psycopg2-binary==2.8.3
 puremagic==1.4
-pyasn1==0.4.6
+pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
 Pygments==2.4.2
 PyJWT==1.7.1
+PyNaCl==1.3.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
@@ -73,7 +80,7 @@ requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
-snowballstemmer==1.9.0
+snowballstemmer==1.9.1
 Sphinx==2.2.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
@@ -89,5 +96,6 @@ termcolor==1.1.0
 tweak==1.0.3
 typed-ast==1.4.0
 typing-extensions==3.7.4
+uritemplate==3.0.0
 urllib3==1.24.3
-Werkzeug==0.15.5
+Werkzeug==0.15.6
