--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,7 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
-aegea==2.6.3
+aegea==2.7.1
 alabaster==0.7.12
-alembic==1.1.0
+alembic==1.2.0
 argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
@@ -14,11 +14,11 @@ boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
 cachetools==3.1.1
-certifi==2019.6.16
+certifi==2019.9.11
 cffi==1.12.3
-chalice==1.11.0
+chalice==1.11.1
 chardet==3.0.4
-click==6.7
+Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.0
@@ -26,14 +26,14 @@ connexion==2.3.0
 coverage==4.5.4
 crc32c==1.7
 cryptography==2.3.1
-dcplib==3.3.0
+dcplib==3.8.0
 dnspython==1.16.0
 docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.2
 flake8==3.7.8
 Flask==1.1.1
-furl==2.0.0
+furl==2.1.0
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.4.0
@@ -56,7 +56,7 @@ mypy-extensions==0.4.1
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
-packaging==19.1
+packaging==19.2
 paramiko==2.6.0
 psycopg2-binary==2.8.3
 puremagic==1.4
@@ -98,4 +98,4 @@ typed-ast==1.4.0
 typing-extensions==3.7.4
 uritemplate==3.0.0
 urllib3==1.24.3
-Werkzeug==0.15.6
+Werkzeug==0.16.0
