--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,11 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
-aegea==2.6.3
+aegea==2.7.3
 alabaster==0.7.12
-alembic==1.1.0
+alembic==1.2.1
 argcomplete==1.10.0
 asn1crypto==0.24.0
 atomicwrites==1.3.0
-attrs==19.1.0
+attrs==19.2.0
 aws-sam-translator==1.11.0
 awscli==1.16.52
 Babel==2.7.0
@@ -14,11 +14,11 @@ boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
 cachetools==3.1.1
-certifi==2019.6.16
+certifi==2019.9.11
 cffi==1.12.3
-chalice==1.11.0
+chalice==1.11.1
 chardet==3.0.4
-click==6.7
+Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.0
@@ -26,14 +26,14 @@ connexion==2.3.0
 coverage==4.5.4
 crc32c==1.7
 cryptography==2.3.1
-dcplib==3.3.0
+dcplib==3.9.0
 dnspython==1.16.0
 docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.2
 flake8==3.7.8
 Flask==1.1.1
-furl==2.0.0
+furl==2.1.0
 future==0.17.1
 google-auth==1.6.3
 google-auth-oauthlib==0.4.0
@@ -51,12 +51,12 @@ keymaker==1.0.9
 Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-mypy==0.720
+mypy==0.730
 mypy-extensions==0.4.1
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
-packaging==19.1
+packaging==19.2
 paramiko==2.6.0
 psycopg2-binary==2.8.3
 puremagic==1.4
