--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
-aegea==2.7.5
+aegea==2.7.9
 alabaster==0.7.12
 alembic==1.2.1
 argcomplete==1.10.0
-asn1crypto==0.24.0
+asn1crypto==1.0.1
 atomicwrites==1.3.0
 attrs==19.2.0
 aws-sam-translator==1.11.0
@@ -21,12 +21,12 @@ chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
-commonmark==0.9.0
+commonmark==0.9.1
 connexion==2.3.0
 coverage==4.5.4
 crc32c==1.7
 cryptography==2.3.1
-dcplib==3.9.0
+dcplib==3.11.0
 dnspython==1.16.0
 docutils==0.15.2
 entrypoints==0.3
@@ -34,16 +34,15 @@ enum-compat==0.0.2
 flake8==3.7.8
 Flask==1.1.1
 furl==2.1.0
-future==0.17.1
 google-auth==1.6.3
-google-auth-oauthlib==0.4.0
+google-auth-oauthlib==0.4.1
 hca==6.4.0
 idna==2.8
 imagesize==1.1.0
 inflection==0.3.1
 ipwhois==1.1.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
 jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
@@ -52,7 +51,7 @@ Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mypy==0.730
-mypy-extensions==0.4.1
+mypy-extensions==0.4.2
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
@@ -71,7 +70,7 @@ PyNaCl==1.3.0
 pyparsing==2.4.2
 python-dateutil==2.8.0
 python-editor==1.0.4
-pytz==2019.2
+pytz==2019.3
 PyYAML==5.1.1
 recommonmark==0.6.0
 requests==2.22.0
@@ -80,7 +79,7 @@ requests-oauthlib==1.2.0
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
-snowballstemmer==1.9.1
+snowballstemmer==2.0.0
 Sphinx==2.2.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
@@ -88,13 +87,14 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-SQLAlchemy==1.3.8
+SQLAlchemy==1.3.9
 SQLAlchemy-Utils==0.34.2
 swagger-ui-bundle==0.0.5
 tenacity==5.0.4
 termcolor==1.1.0
 tweak==1.0.3
 typed-ast==1.4.0
+typing==3.6.4
 typing-extensions==3.7.4
 uritemplate==3.0.0
 urllib3==1.24.3
