--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
 # You should not edit this file directly.  Instead, you should edit requirements.txt.in.
 argcomplete==1.10.0
-asn1crypto==1.1.0
+asn1crypto==1.2.0
 atomicwrites==1.3.0
+attrs==19.3.0
+aurora-data-api==0.0.4
 awscli==1.16.52
 boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
 cachetools==3.1.1
 certifi==2019.9.11
-cffi==1.12.3
+cffi==1.13.0
 chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.1
-connexion==2.3.0
+connexion==2.4.0
 crc32c==1.7
 cryptography==2.3.1
 dcplib==3.12.0
@@ -25,22 +27,24 @@ google-auth==1.6.3
 google-auth-oauthlib==0.4.1
 hca==6.4.0
 idna==2.8
+importlib-metadata==0.23
 inflection==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jmespath==0.9.4
 jsonpointer==1.14
-jsonschema==2.6.0
+jsonschema==3.1.1
 MarkupSafe==1.1.1
+more-itertools==7.2.0
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
-psycopg2-binary==2.8.3
 puremagic==1.4
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
 pycparser==2.19
 PyJWT==1.7.1
+pyrsistent==0.15.4
 python-dateutil==2.8.0
 PyYAML==5.1.1
 requests==2.22.0
@@ -50,9 +54,11 @@ rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
 SQLAlchemy==1.3.10
+sqlalchemy-aurora-data-api==0.0.1
 swagger-ui-bundle==0.0.5
 tenacity==5.0.4
 termcolor==1.1.0
 tweak==1.0.3
 urllib3==1.24.3
 Werkzeug==0.15.6
+zipp==0.6.0
