--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,10 @@
 # You should not edit this file directly.  Instead, you should edit requirements-dev.txt.in.
-aegea==2.7.9
+aegea==3.2.7
 alabaster==0.7.12
-alembic==1.2.1
-argcomplete==1.10.0
-asn1crypto==1.1.0
+alembic==1.3.2
+argcomplete==1.10.3
 atomicwrites==1.3.0
-attrs==19.2.0
+attrs==19.3.0
 aws-sam-translator==1.11.0
 awscli==1.16.52
 Babel==2.7.0
@@ -14,29 +13,29 @@ boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
 cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.12.3
-chalice==1.11.1
+certifi==2019.11.28
+cffi==1.13.2
+chalice==1.12.0
 chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.1
-connexion==2.3.0
-coverage==4.5.4
-crc32c==1.7
-cryptography==2.3.1
+connexion==2.5.0
+coverage==5.0
+crc32c==2.0
+cryptography==2.8
 dcplib==3.12.0
 dnspython==1.16.0
 docutils==0.15.2
 entrypoints==0.3
 enum-compat==0.0.3
-flake8==3.7.8
+flake8==3.7.9
 Flask==1.1.1
 furl==2.1.0
-google-auth==1.6.3
+google-auth==1.9.0
 google-auth-oauthlib==0.4.1
-hca==6.4.0
+hca==6.5.1
 idna==2.8
 imagesize==1.1.0
 inflection==0.3.1
@@ -46,56 +45,57 @@ Jinja2==2.10.3
 jmespath==0.9.4
 jsonpointer==1.14
 jsonschema==2.6.0
-keymaker==1.0.9
+keymaker==1.1.0
 Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-mypy==0.730
-mypy-extensions==0.4.2
+mypy==0.750
+mypy-extensions==0.4.3
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
 packaging==19.2
-paramiko==2.6.0
-psycopg2-binary==2.8.3
+paramiko==2.7.1
+psycopg2-binary==2.8.4
 puremagic==1.4
-pyasn1==0.4.7
+pyasn1==0.4.8
 pyasn1-modules==0.2.7
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
-Pygments==2.4.2
+Pygments==2.5.2
 PyJWT==1.7.1
 PyNaCl==1.3.0
-pyparsing==2.4.2
-python-dateutil==2.8.0
+pyparsing==2.4.5
+python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
 PyYAML==5.1.1
 recommonmark==0.6.0
 requests==2.22.0
 requests-http-signature==0.1.0
-requests-oauthlib==1.2.0
+requests-oauthlib==1.3.0
 rsa==3.4.2
-s3transfer==0.2.1
-six==1.12.0
+s3transfer==0.1.13
+six==1.13.0
 snowballstemmer==2.0.0
-Sphinx==2.2.0
+Sphinx==2.3.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-SQLAlchemy==1.3.10
-SQLAlchemy-Utils==0.34.2
-swagger-ui-bundle==0.0.5
+SQLAlchemy==1.3.12
+SQLAlchemy-Utils==0.36.0
+swagger-ui-bundle==0.0.6
 tenacity==5.0.4
 termcolor==1.1.0
+tqdm==4.40.2
 tweak==1.0.3
 typed-ast==1.4.0
 typing==3.6.4
-typing-extensions==3.7.4
+typing-extensions==3.7.4.1
 uritemplate==3.0.0
 urllib3==1.24.3
 Werkzeug==0.15.6
