--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,63 @@
 # You should not edit this file directly.  Instead, you should edit requirements.txt.in.
-argcomplete==1.10.0
-asn1crypto==1.1.0
+argcomplete==1.10.3
 atomicwrites==1.3.0
+attrs==19.3.0
 awscli==1.16.52
 boto3==1.9.42
 botocore==1.12.42
 Brotli==1.0.7
 cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.12.3
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
 Click==7.0
 clickclick==1.2.2
 colorama==0.3.9
 commonmark==0.9.1
-connexion==2.3.0
-crc32c==1.7
-cryptography==2.3.1
+connexion==2.5.0
+crc32c==2.0
+cryptography==2.8
 dcplib==3.12.0
 docutils==0.15.2
 Flask==1.1.1
 furl==2.1.0
-google-auth==1.6.3
+google-auth==1.9.0
 google-auth-oauthlib==0.4.1
-hca==6.4.0
+hca==6.5.1
 idna==2.8
+importlib-metadata==1.3.0
 inflection==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jmespath==0.9.4
 jsonpointer==1.14
-jsonschema==2.6.0
+jsonschema==3.2.0
 MarkupSafe==1.1.1
+more-itertools==8.0.2
 oauthlib==3.1.0
 openapi-spec-validator==0.2.8
 orderedmultidict==1.0.1
-psycopg2-binary==2.8.3
+psycopg2-binary==2.8.4
 puremagic==1.4
-pyasn1==0.4.7
+pyasn1==0.4.8
 pyasn1-modules==0.2.7
 pycparser==2.19
 PyJWT==1.7.1
-python-dateutil==2.8.0
+pyrsistent==0.15.6
+python-dateutil==2.8.1
 PyYAML==5.1.1
 requests==2.22.0
 requests-http-signature==0.1.0
-requests-oauthlib==1.2.0
+requests-oauthlib==1.3.0
 rsa==3.4.2
-s3transfer==0.2.1
-six==1.12.0
-SQLAlchemy==1.3.10
-swagger-ui-bundle==0.0.5
+s3transfer==0.1.13
+six==1.13.0
+SQLAlchemy==1.3.12
+swagger-ui-bundle==0.0.6
 tenacity==5.0.4
 termcolor==1.1.0
+tqdm==4.40.2
 tweak==1.0.3
 urllib3==1.24.3
 Werkzeug==0.15.6
+zipp==0.6.0
